[gd_scene load_steps=30 format=3 uid="uid://0tj8jlrth3xx"]

[ext_resource type="PackedScene" uid="uid://bhjlubogk8c6t" path="res://scenes/atram2.tscn" id="1_2wbqd"]
[ext_resource type="Script" path="res://scenes/hallway.gd" id="1_7ppyp"]
[ext_resource type="Texture2D" uid="uid://bp84dvkkrqv7y" path="res://images/hall/hall-bg copy.png" id="2_56bjf"]
[ext_resource type="AudioStream" uid="uid://c5dfku7uormko" path="res://sound/music/cream.mp3" id="2_s42qg"]
[ext_resource type="PackedScene" uid="uid://dq6vwgdae8235" path="res://camera_2d.tscn" id="3_0n37q"]
[ext_resource type="Texture2D" uid="uid://dccje028fdnhb" path="res://images/hall/hall-door copy.png" id="3_e30pi"]
[ext_resource type="Texture2D" uid="uid://c4kd2r3bgupnb" path="res://images/hall/hall-junk1 copy.png" id="4_agvvf"]
[ext_resource type="Texture2D" uid="uid://c3lf0b340vxso" path="res://images/hall/hall-lift copy.png" id="5_q4t1c"]
[ext_resource type="Script" path="res://interactions/interactionarea/helping-sid/hall_door_area.gd" id="6_2ssty"]
[ext_resource type="AudioStream" uid="uid://cwh4jp0qcihyh" path="res://sound/sfx/sfx_door.mp3" id="6_i44el"]
[ext_resource type="Texture2D" uid="uid://ddd0piav3vatc" path="res://images/hall/hall-overlay copy.png" id="6_jlll0"]
[ext_resource type="Texture2D" uid="uid://cun2gi07klcuk" path="res://images/hall/hall-stairs2 copy.png" id="6_u1qwf"]
[ext_resource type="Texture2D" uid="uid://bvangc3i18ep3" path="res://images/hall/Hall-railing-1 copy.png" id="7_02mum"]
[ext_resource type="Texture2D" uid="uid://dictbb3tvlwjd" path="res://images/hall/hall-stairs-shadow copy.png" id="7_acpf6"]
[ext_resource type="Texture2D" uid="uid://b7vwv1c44m2oh" path="res://images/hall/hall-stairs1 copy.png" id="8_a4u36"]
[ext_resource type="Texture2D" uid="uid://bc7tvj3dmfa6x" path="res://images/hall/hall-railing-2 copy.png" id="8_qivfy"]
[ext_resource type="Texture2D" uid="uid://crm2l38pi4ym" path="res://images/hall/hall-vents copy.png" id="11_eyg24"]
[ext_resource type="Theme" uid="uid://b2op61nl70bii" path="res://resources/default_theme.tres" id="12_1s7y5"]
[ext_resource type="Texture2D" uid="uid://e52o6bkyjddy" path="res://images/hall/smet-box4 copy.png" id="12_w3rwf"]
[ext_resource type="Texture2D" uid="uid://rtacjq86brdf" path="res://images/hall/smet-box3 copy.png" id="14_8123t"]
[ext_resource type="PackedScene" uid="uid://dlfpg5qlr267c" path="res://scenes/sceneTransitionAnimation.tscn" id="16_xuohv"]
[ext_resource type="Script" path="res://interactions/interactionarea/helping-sid/hall_junk_area.gd" id="17_wtro7"]
[ext_resource type="Script" path="res://interactions/interactionarea/helping-sid/hall_graffiti_area2.gd" id="20_su0y6"]
[ext_resource type="Script" path="res://interactions/interactionarea/helping-sid/ball_box_area2.gd" id="20_uhsw8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5likq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lpun5"]
radius = 16.0
height = 68.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nqa42"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8bu3c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kxpjs"]

[node name="Hallway" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_7ppyp")

[node name="atramm2" parent="." instance=ExtResource("1_2wbqd")]
position = Vector2(780, 607)
scale = Vector2(0.5, 0.5)

[node name="Camera2D" parent="atramm2" instance=ExtResource("3_0n37q")]

[node name="background-hallway" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(1216, 837)

[node name="Polygon2D" type="Polygon2D" parent="background-hallway"]
z_index = -4
position = Vector2(-306, 258)
scale = Vector2(1.64, 1.64)
color = Color(0.110801, 0.0982291, 0.120227, 1)
polygon = PackedVector2Array(-1337, -956, -1337, 818, 1828, 821, 1822, -929)

[node name="hall-bg-with-col" type="StaticBody2D" parent="background-hallway"]

[node name="floor-collision" type="CollisionPolygon2D" parent="background-hallway/hall-bg-with-col"]
z_index = 1
polygon = PackedVector2Array(-990, 25, 415, 733, 1014, 432, -417, -281, -988, 21, -1093, -64, -337, -469, 1232, 398, 462, 874, -1149, 88)

[node name="hall-bg" type="Sprite2D" parent="background-hallway/hall-bg-with-col"]
z_index = -3
texture = ExtResource("2_56bjf")

[node name="hall-door" type="Sprite2D" parent="background-hallway"]
z_index = -1
position = Vector2(-182, -325)
texture = ExtResource("3_e30pi")

[node name="door sfx" type="AudioStreamPlayer" parent="background-hallway/hall-door"]
stream = ExtResource("6_i44el")
stream_paused = true
bus = &"SFX"

[node name="hall-door-area" type="Area2D" parent="background-hallway/hall-door"]
script = ExtResource("6_2ssty")

[node name="hall-door-area-col" type="CollisionShape2D" parent="background-hallway/hall-door/hall-door-area"]
position = Vector2(-18, 151)
rotation = 0.35743
scale = Vector2(9.27423, 7.24791)
shape = SubResource("CircleShape2D_5likq")

[node name="hall-door-area-label" type="Label" parent="background-hallway/hall-door/hall-door-area"]
z_index = 1023
offset_left = 55.0
offset_top = 25.0
offset_right = 126.0
offset_bottom = 54.0
scale = Vector2(1.19172, 1.19172)
theme = ExtResource("12_1s7y5")
text = "Дверь"

[node name="hall-lift" type="Sprite2D" parent="background-hallway"]
z_index = -1
position = Vector2(-858, -218)
texture = ExtResource("5_q4t1c")

[node name="hall-railing-2" type="Sprite2D" parent="background-hallway"]
z_index = -2
position = Vector2(-468, -321)
texture = ExtResource("8_qivfy")

[node name="hall-stairs-2" type="Sprite2D" parent="background-hallway"]
z_index = -2
position = Vector2(-484, -261)
texture = ExtResource("6_u1qwf")

[node name="hall-stairs-shadow" type="Sprite2D" parent="background-hallway"]
z_index = -1
position = Vector2(-537, -458)
texture = ExtResource("7_acpf6")

[node name="hall-stairs1" type="Sprite2D" parent="background-hallway"]
z_index = -1
position = Vector2(-602, -310)
texture = ExtResource("8_a4u36")

[node name="hall-railing-1" type="Sprite2D" parent="background-hallway"]
position = Vector2(-577, -317)
texture = ExtResource("7_02mum")
offset = Vector2(0, -81.1)

[node name="patch2" type="Polygon2D" parent="background-hallway"]
position = Vector2(-537, -458)
color = Color(0.266667, 0.294118, 0.278431, 1)
polygon = PackedVector2Array(-150, 41, -150, -134, -166, -126, -165, 37)

[node name="patch1" type="Polygon2D" parent="background-hallway"]
z_index = -1
position = Vector2(-404.711, 54)
scale = Vector2(0.421687, 1)
color = Color(0.352941, 0.462745, 0.403922, 1)
polygon = PackedVector2Array(-835.429, -154, -837.8, -176, -754.8, -174)

[node name="hall-overlay" type="Sprite2D" parent="background-hallway"]
z_index = -1
position = Vector2(3, 54)
texture = ExtResource("6_jlll0")

[node name="hall-vents" type="Sprite2D" parent="background-hallway"]
z_index = 1
position = Vector2(159, -342)
texture = ExtResource("11_eyg24")

[node name="objects" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(1216, 837)

[node name="hall-junk-static" type="StaticBody2D" parent="objects"]
z_index = 1
y_sort_enabled = true
position = Vector2(422, 79)

[node name="hall-junk" type="Sprite2D" parent="objects/hall-junk-static"]
position = Vector2(0, 80)
texture = ExtResource("4_agvvf")
offset = Vector2(0, -77.425)

[node name="junk-col" type="CollisionShape2D" parent="objects/hall-junk-static"]
position = Vector2(-2, 74)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lpun5")

[node name="hall-junk-area" type="Area2D" parent="objects/hall-junk-static"]
script = ExtResource("17_wtro7")

[node name="hall-junk-area-label" type="Label" parent="objects/hall-junk-static/hall-junk-area"]
z_index = 1023
offset_left = -122.0
offset_top = -134.0
offset_right = 89.0001
offset_bottom = -105.0
scale = Vector2(1.19172, 1.19172)
theme = ExtResource("12_1s7y5")
text = "Мусорная корзина"

[node name="hall-junk-area-col" type="CollisionShape2D" parent="objects/hall-junk-static/hall-junk-area"]
position = Vector2(-34, 82)
scale = Vector2(7.48339, 5.8417)
shape = SubResource("CircleShape2D_nqa42")

[node name="box-3-static" type="StaticBody2D" parent="objects"]
z_index = 1
y_sort_enabled = true
position = Vector2(257, 52)

[node name="box-col" type="CollisionPolygon2D" parent="objects/box-3-static"]
y_sort_enabled = true
position = Vector2(-1491, -897)
polygon = PackedVector2Array(1420, 925, 1500, 965, 1561, 935, 1482, 898)

[node name="hall-box2" type="Sprite2D" parent="objects/box-3-static"]
y_sort_enabled = true
position = Vector2(0, 28)
texture = ExtResource("14_8123t")
offset = Vector2(0, -30)

[node name="hall-box-stack-static" type="StaticBody2D" parent="objects"]
z_index = 1
y_sort_enabled = true
position = Vector2(548, 127)

[node name="hall-box-2" type="Sprite2D" parent="objects/hall-box-stack-static"]
y_sort_enabled = true
position = Vector2(-2, 97)
texture = ExtResource("12_w3rwf")
offset = Vector2(0, -33.525)

[node name="hall-box" type="Sprite2D" parent="objects/hall-box-stack-static"]
position = Vector2(-1, 99)
texture = ExtResource("14_8123t")
offset = Vector2(0, -104.58)

[node name="box-stack-col" type="CollisionPolygon2D" parent="objects/hall-box-stack-static"]
z_index = 1
y_sort_enabled = true
polygon = PackedVector2Array(-73, 92, 5, 131, 67, 103, -14, 62)

[node name="ball-box-area" type="Area2D" parent="objects/hall-box-stack-static"]
script = ExtResource("20_uhsw8")

[node name="hall-box-area-col" type="CollisionShape2D" parent="objects/hall-box-stack-static/ball-box-area"]
position = Vector2(-26, 116)
rotation = -0.753819
scale = Vector2(8.52945, 8.2094)
shape = SubResource("CircleShape2D_8bu3c")

[node name="hall-box-area-label" type="Label" parent="objects/hall-box-stack-static/ball-box-area"]
z_index = 1023
offset_left = -56.0
offset_top = -108.0
offset_right = 155.0
offset_bottom = -79.0
scale = Vector2(1.19172, 1.19172)
theme = ExtResource("12_1s7y5")
text = "Коробки"

[node name="graffiti-area" type="Area2D" parent="objects"]
script = ExtResource("20_su0y6")

[node name="graffiti-area-col" type="CollisionShape2D" parent="objects/graffiti-area"]
position = Vector2(766, 307)
rotation = 0.460072
scale = Vector2(14.6539, 7.25063)
shape = SubResource("CircleShape2D_kxpjs")

[node name="hall-junk-area-label2" type="Label" parent="objects/graffiti-area"]
z_index = 1023
offset_left = 863.0
offset_top = 212.0
offset_right = 1074.0
offset_bottom = 241.0
scale = Vector2(1.19172, 1.19172)
theme = ExtResource("12_1s7y5")
text = "Граффити"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_s42qg")
autoplay = true
bus = &"MUSIC"
parameters/looping = true

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("16_xuohv")]

[connection signal="body_entered" from="background-hallway/hall-door/hall-door-area" to="background-hallway/hall-door/hall-door-area" method="_on_body_entered"]
[connection signal="body_exited" from="background-hallway/hall-door/hall-door-area" to="background-hallway/hall-door/hall-door-area" method="_on_body_exited"]
[connection signal="body_entered" from="objects/hall-junk-static/hall-junk-area" to="objects/hall-junk-static/hall-junk-area" method="_on_body_entered"]
[connection signal="body_exited" from="objects/hall-junk-static/hall-junk-area" to="objects/hall-junk-static/hall-junk-area" method="_on_body_exited"]
[connection signal="body_entered" from="objects/hall-box-stack-static/ball-box-area" to="objects/hall-box-stack-static/ball-box-area" method="_on_body_entered"]
[connection signal="body_exited" from="objects/hall-box-stack-static/ball-box-area" to="objects/hall-box-stack-static/ball-box-area" method="_on_body_exited"]
[connection signal="body_entered" from="objects/graffiti-area" to="objects/graffiti-area" method="_on_body_entered"]
[connection signal="body_exited" from="objects/graffiti-area" to="objects/graffiti-area" method="_on_body_exited"]
